--- a/Marmitaria/src/app/app.component.html
+++ b/Marmitaria/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
+<app-header></app-header>
 
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <app-packages *ngIf="loadedFeature == 'packages'"></app-packages>
-      <app-food-list *ngIf="loadedFeature == 'food-list'"></app-food-list>
+      <router-outlet></router-outlet>
+      
     </div>
   </div>
 </div>
