--- a/Marmitaria/src/app/packages/package-list/package-item/package-item.component.html
+++ b/Marmitaria/src/app/packages/package-list/package-item/package-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected()">
+<a class="list-group-item clearfix" (click)="onSelected()" style="cursor: pointer">
     <div class="float-start">
         <h4 class="list-group-item-heading">{{ package.name }}</h4>
         <p class="list-group-item-text"> {{ package.description }}</p>
