--- a/routing/src/app/home/home.component.html
+++ b/routing/src/app/home/home.component.html
@@ -1,2 +1,8 @@
 <h3>Sistema de Gerenciamento da Empresa 1.0</h3>
 <p>Gerencia seus Fornecedores e Produtos</p>
+<button class="btn btn-primary" (click)="loadProduct(1)">Ver Produto 1</button>
+<hr>
+<button class="btn btn-secondary m-1" (click)="login()">Entrar</button>
+<button class="btn btn-secondary m-1" (click)="logout()">Sair</button>
+<hr>
+<p>Usuário {{ authenticated }} </p>
