--- a/routing/src/app/products/product/product.component.html
+++ b/routing/src/app/products/product/product.component.html
@@ -1,2 +1,4 @@
 <h5>{{ product?.name }}</h5>
 <p>O produto está {{ product?.status }}</p>
+
+<button class="btn btn-sm btn-primary" (click)="onEdit()">Editar Produto</button>
