--- a/routing/src/app/suppliers/suppliers.component.html
+++ b/routing/src/app/suppliers/suppliers.component.html
@@ -2,7 +2,7 @@
     <div class="col-12 col-sm-4">
       <div class="list-group">
         <a
-          href="#"
+          [routerLink]="['/fornecedores', supplier.id, supplier.name]"
           class="list-group-item"
           *ngFor="let supplier of suppliers">
           {{ supplier.name }}
@@ -10,7 +10,8 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
-      <app-supplier></app-supplier>
+      <!-- <app-supplier></app-supplier> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
   
