--- a/routing/src/app/app.component.html
+++ b/routing/src/app/app.component.html
@@ -4,13 +4,21 @@
     <div class="col-12 col-sm-10 col-md-8">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
+          <a class="nav-link" 
+          aria-current="page" 
+          routerLinkActive="active" 
+          [routerLinkActiveOptions]="{exact: true}"
+          [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
+          <a class="nav-link" 
+          routerLinkActive="active" 
+          [routerLink]="['/produtos']">Produtos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/fornecedores']">Fornecedores</a>
+          <a class="nav-link" 
+          routerLinkActive="active" 
+          [routerLink]="['/fornecedores']">Fornecedores</a>
         </li>
       </ul>
     </div>
