--- a/routing/src/app/products/edit-product/edit-product.component.html
+++ b/routing/src/app/products/edit-product/edit-product.component.html
@@ -1,12 +1,17 @@
-<div class="form-group">
-    <label for="name">Nome do Produto</label>
-    <input type="text" id="name" class="form-control" [(ngModel)]="productName">
+
+<h4 *ngIf="!allowEdit">Você não tem permissão para alterar este produto</h4>
+<div *ngIf="allowEdit">
+    <div class="form-group">
+        <label for="name">Nome do Produto</label>
+        <input type="text" id="name" class="form-control" [(ngModel)]="productName">
+    </div>
+    <div class="form-group">
+        <label for="status">Status</label>
+        <select id="status" class="form-control" [(ngModel)]="productStatus">
+            <option value="disponível">Disponível</option>
+            <option value="indisponível">Indisponível</option>
+        </select>
+    </div>
+    <button class="btn btn-sm btn-success my-2" (click)="onUpdateProduct()">Atualizar Produto</button>
 </div>
-<div class="form-group">
-    <label for="status">Status</label>
-    <select id="status" class="form-control" [(ngModel)]="productStatus">
-        <option value="online">Ativo</option>
-        <option value="offline">Inativo</option>
-    </select>
-</div>
-<button class="btn btn-sm btn-success my-2">Atualizar Produto</button>
+
