--- a/routing/src/app/products/products.component.html
+++ b/routing/src/app/products/products.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col-12 col-sm-4">
         <div class="list-group">
-            <a href="#" class="list-group-item"
+            <a  [routerLink]="['/produtos', product.id]"
+                [queryParams]="{permiteEditar: product.id === 1 ? '1' : '0'}"
+                fragment="carregando"
+                class="list-group-item"
                 *ngFor="let product of products">
                 {{ product.name }}
             </a>
@@ -9,8 +12,10 @@
     </div>
 
     <div class="col-12 col-sm-4">
-        <app-edit-product></app-edit-product>
-        <hr>
-        <app-product></app-product>
+        <router-outlet></router-outlet>
+        
+        <!-- <app-edit-product></app-edit-product>
+        <hr> -->
+        <!-- <app-product></app-product> -->
     </div>
 </div>
